# l78z

./: .gitignore  LICENSE  README.md  plan_2023.md
agent/: README.md
algorithms/: README.md  dynamic_program.py  geohash.md
algorithms/skiplist/: skiplist.c  skiplist.h  skiplist_example.c
architecture/: README.md  linux.md
bitcoin/: MockExchanges.py  README.md  backT.py  backtrader.py  ccxTest.py  download_btc_days.py  make_cls3.py  make_pairs.py  model_v1.py  preprocess.py  test.py  train_pair.py  train_point.py
bitcoin/schema/: db.sql  export.sh  gen_fields.py  run.sh
c/: README.md  exe1.c  sort_test.cpp
c_cpp/: README.md  basics.md  notes.md  string_replace.cpp  stuct_vector.cpp  test.cpp  useful_code.cpp  vector_normalize.cpp
c_cpp/c/: exe2.c  int2float.cpp
c_cpp/include_3rd/: README.md
c_cpp/include_3rd/boost/: CMakeLists.txt  README.md  main.cpp
c_cpp/include_3rd/leveldb/: CMakeLists.txt  main.cpp
c_cpp/include_3rd/sqlite/: CMakeLists.txt
c_cpp/include_3rd/torch/: CMakeLists.txt
c_cpp/include_3rd/xgboost/: CMakeLists.txt  main.cpp
c_cpp/note_1_HelloWord/: Readme.md  bin_test  bin_test.cpp  binary_test.cpp  chinese_sub  chinese_sub.cpp  hello_word  hello_word.cpp
c_cpp/note_2_MultiFiles/: main.cpp  mylib.cpp
c_cpp/note_3_CMake/: CmakeLists.txt  boost_test.cpp
c_cpp/project_demo/: CMakeLists.txt
chaos/: Aizawa.py  Chen.py  Chua.py  Duffing.py  Hubbard.py  Ikeda.py  Mandelbrot.py  Robert_May.py  Robert_May_2.py  Rossler.py  double_scroll.py  henon.py  lorenz.py  rabinovich_fabrikant.py
cpp/: README.md
cpp/note_1_HelloWord/: array_test  array_test.cpp  chinese_sub  chinese_sub.cpp  cn_code.cpp  hello_word.cpp
cpp/note_2_MultiFiles/: mylib.h
cpp/se_1/: README.md
craft/: README.md  block.py  block.txt  entity.py  entity.txt
craft/samples/: README.md  (+4 more)
deep_learning/: 1_2_pytorch.ipynb  1_basic.ipynb  1_deep_learing.ipynb  1_iris.ipynb  1_linear_regression.ipynb  1_rankdnn.ipynb  1_scalar_vector_matrix_tensor.ipynb  1_softmax_cross_entropy.ipynb  2_cnn.ipynb  2_image_semantic_segmentation.ipynb  2_ocr.ipynb  2_siamese.ipynb  2_yolo.ipynb  3_bert.ipynb  3_crf.ipynb  3_nlp.ipynb  3_rnn_lstm_gru.ipynb  3_semantic_relevance.ipynb  3_seq2seq.ipynb  3_transformer.ipynb  4_active_learning.ipynb  README.md  deeplearning_summary.ipynb  deploy.ipynb  script1.py  siamese_module.pth  test.ipynb  tmp.py  tmp.txt  xgb.md  xor.py  xor1.py  xor2.py  xor_load.py
deep_learning/cplus_deploy/: CMakeLists.txt  build.sh  example-app.cpp
math/: README.md  byte_test.py  vecotr_test.py
mathematics/: 5_fraction_compare.md  README.md  xfwhzdsx.md
ml/: iris_bayes.py  learning_pytorch.md  linear_regression.py  logistic_regression.py  txt_bayes.py
my_writing/: game.txt  webgl.md  webgl.txt
nlp/: README.md
notes/: Hystrix.md  Mac-MySQL-Nginx-PHP7.txt  PaddlePaddle.txt  README.md  docker.md  gRPC.txt  git.md  hadoop.txt  hive.txt  java.txt  linux-arch.txt   linux-shell.txt  linux-ubuntu.txt  linux.md  log.txt  ml_plan  mysql.txt  numpy.txt  opencv.md  opensource_webanalytics.txt  piwik.txt  protobuf.txt  python.md  python.txt  ros.txt  server.txt  shell-data.txt  spark.txt  sqlite.txt  storm.txt  test.md  todo.txt  vr.txt  web_analytics.txt  yolov3.md
robotech/: 3d_games.md  README.md  Survey_2023.md  digital_twins.md
stocks/: 001.csv  README.md  SimExchange.py  changelog.md  cluster.py  common.py  compute_day_delta.py  convert.py  dataset_split_new_2.sql  day_delta.py  download_daily.py  download_history.py  download_today.py  fix_bugs.py  lambdaRank.py  lambdamart.py  lastNdays.py  minmax_day.py  ndcg_test.py  old_download_history.py  pca_test.py  position_v1.py  position_v2.py  predict_merge.py  preprocess4rnn.py  preprocess4xgb.py  publish.sh  recall_cosie.py  rnn_make_pairs.py  rnn_run_train.sh  rnn_train_pair.py  run_daily.py  run_daily.sh  run_predict.sh  sample_data.py  seq_boost_prepare_data.py  seq_data_split.py  seq_list.py  seq_list_drop.py  seq_make_list.py  (+41 more)
thinking/: agricultural_technology.md  history.md  tech_history.md
timeline/: README.md
tools/: cn.txt  hanzi2pinyin.py  t.md  test.md  trans_dict.py  translate.dict
yi/: README.md  f.py  kaogu.md  shanhaijing.md  yi.md
(+170 files in other folders)
